# out-of-gafam

./: .env.dist  .gitignore  .yarnrc  Cargo.toml  Dockerfile  LICENSE  Makefile  bower.json  docker-compose.yml  package.json
.github/: dependabot.yml
docs/: README.md
src/: error.rs  facebook.rs  main.rs  site.rs  template.rs
src/facebook/: graph.rs  mobile.rs  mod.rs
src/sites/: custom.rs  facebook.rs  instagram.rs  leboncoin.rs  mod.rs  twitter.rs  youtube.rs
src/sql/: structure.sql
static/css/: main.css
templates/: about.html  base.html  index.html  macro.html  post.html  preview.html  privacy.html  rss.xml  show.html  user.html
templates/blocks/: preview.html
templates/errors/: 400.html  404.html  500.html
templates/help/: facebook.html  instagram.html  leboncoin.html  twitter.html  youtube.html
