[package]
name = "oog"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
chrono = "0.4"
chrono-english = "0.1"
envir = "0.4"
form_urlencoded = "1.0.0"
lazy_static = "1.4"
log = "0.4"
regex = "1.0"
scraper = "0.19"
serde_json = "1.0"
tera = "1.0"
tera-hot = "0.4"
thiserror = "1.0"
url = "2.2"
urlencoding = "2.0"

[dependencies.attohttpc]
version = "0.28"
features = ["json"]

[dependencies.elephantry]
version = "4.0"
features = ["uuid"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["serde"]
