[package]
name = "oog"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
license = "MIT"
rust-version = "1.80"

[dependencies]
actix-files = "0.6"
actix-web = "4.0"
chrono = "0.4"
envir = "1.0"
form_urlencoded = "1.0.0"
log = "0.4"
regex = "1.0"
scraper = "0.21"
serde_json = "1.0"
tera = "1.0"
tera-hot = "0.4"
thiserror = "2.0"
url = "2.2"
urlencoding = "2.0"

[dependencies.attohttpc]
version = "0.28"
features = ["json"]

[dependencies.elephantry]
version = "4.0"
features = ["uuid"]

[dependencies.interim]
version = "0.1"
features = ["chrono"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.uuid]
version = "1.0"
features = ["serde"]
